@@ -166,6 +166,10 @@ PHP 8.5 UPGRADE NOTES
 - DOM:
   . Added Dom\Element::insertAdjacentHTML().
 
+- Enchant:
+  . Added enchant_dict_remove_from_session() to remove a word added to the
+    spellcheck session via enchant_dict_add_to_session().
+
 - PGSQL:
   . pg_close_stmt offers an alternative way to close a prepared
     statement from the DEALLOCATE sql command in that we can reuse
