@@ -29,6 +29,9 @@ PHP                                                                        NEWS
   . Added Dom\Element::$outerHTML. (nielsdos)
   . Added Dom\Element::insertAdjacentHTML(). (nielsdos)
 
+- Enchant:
+  . Added enchant_dict_remove_from_session(). (nielsdos)
+
 - Intl:
   . Bumped ICU requirement to ICU >= 57.1. (cmb)
   . IntlDateFormatter::setTimeZone()/datefmt_set_timezone() throws an exception
